--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
         - Emacs: tools_cheatsheet/emacs.md
         - Git: tools_cheatsheet/git.md
         - Makefile: tools_cheatsheet/makefile.md
+        - Coding Style: tools_cheatsheet/coding_style.md
         - Csfml Library: tools_cheatsheet/csfml.md
         - Ncurses Library: tools_cheatsheet/ncurses.md
     - C PROGRAMMING:
