--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
         - Blih: tools_cheatsheet/blih.md
         - Git: tools_cheatsheet/git.md
         - Emacs: tools_cheatsheet/emacs.md
+        - Gcc: tools_cheatsheet/gcc.md
         - Makefile: tools_cheatsheet/makefile.md
         - Coding Style: tools_cheatsheet/coding_style.md
         - Csfml Library: tools_cheatsheet/csfml.md
